--- a/risposte.css
+++ b/risposte.css
@@ -1,7 +1,11 @@
-.ex-1-square{
+.ex-1-square, .ex-2-square{
     transition: 2s;
 }
 
 .ex-1-square:hover{
     background-color: red;
+}
+
+.ex-2-square:active{
+    width: 100%;
 }
