--- a/risposte.css
+++ b/risposte.css
@@ -9,3 +9,12 @@
 .ex-2-square:active{
     width: 100%;
 }
+
+
+.ex-3-square{
+    transition: .5s;
+}
+
+.ex-3-square:hover{
+    border-radius: 50%;
+}
