--- a/risposte.css
+++ b/risposte.css
@@ -18,3 +18,11 @@
 .ex-3-square:hover{
     border-radius: 50%;
 }
+
+.ex-4-square{
+    transition: 1s;
+}
+
+.ex-4-square:hover{
+    opacity: 0;
+}
