--- a/risposte.css
+++ b/risposte.css
@@ -32,3 +32,13 @@
     height: 100px;
     margin: 0;
 }
+
+.ex-5-square:active{
+    /* width: 60px;
+    height: 60px; */
+    transform: scale(.5)
+}
+
+.ex-6-img:hover{
+    filter: grayscale(100%);
+}
