--- a/risposte.css
+++ b/risposte.css
@@ -1,4 +1,4 @@
-.ex-1-square, .ex-2-square .ex-7-img, .ex-8-img{
+.ex-1-square, .ex-2-square .ex-7-img, .ex-8-img, .ex-9-img{
     transition: 2s;
 }
 
@@ -19,7 +19,7 @@
     border-radius: 50%;
 }
 
-.ex-4-square, .ex-5-square{
+.ex-4-square, .ex-5-square, .ex-5-square{
     transition: 1s;
 }
 
@@ -28,25 +28,25 @@
 }
 
 .ex-5-square:hover{
-    width: 100px;
-    height: 100px;
-    margin: 0;
+    transform: scale(2)
 }
 
 .ex-5-square:active{
-    /* width: 60px;
-    height: 60px; */
-    transform: scale(.5)
+   transform: scale(.5)
 }
 
 .ex-6-img:hover{
     filter: grayscale(100%);
 }
 
-.ex-7-img:hover, .ex-8-img:hover{
+.ex-7-img:hover, .ex-8-img:hover, .ex-9-img:hover{
     filter: grayscale(.6) sepia(.5);
 }
 
-.ex-8-img:hover{
+.ex-8-img:hover, .ex-9-img:hover{
     border-radius: 20px;
+}
+
+.ex-9-img:hover{
+    transform: scale(1.5)
 }
