--- a/risposte.css
+++ b/risposte.css
@@ -50,3 +50,19 @@
 .ex-9-img:hover{
     transform: scale(1.5)
 }
+
+
+.ex-10-icon{
+    animation-name: spin;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+
+}
+
+@keyframes spin {
+    0% 
+        { transform: rotate(0deg);}
+    100% 
+        { transform: rotate(-360deg);}
+}
