--- a/risposte.css
+++ b/risposte.css
@@ -127,3 +127,77 @@
         right:10%;
     }
 }
+
+
+.ex-13-button:hover .ex-13-top-white {
+    animation-name: test2-top;
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: test2-bottom;
+}
+
+.ex-13-top-white,
+.ex-13-bottom-white
+{
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;  
+    /* background-color: chartreuse; */
+    position: absolute;
+}
+
+
+@keyframes test2-top {
+    0% {
+        left: 10%;
+        top: -10px;
+    }
+    30% {
+        left: calc(100% - 40px);
+        top: -10px;
+    }
+    45% {
+        left: calc(100% - 40px);
+        top: 100%;
+    }
+    75% {
+        left: 0;
+        top: 100%;
+    }
+    90% {
+        left: -15px;
+        top: -10px;
+    }
+    100% {
+        left: 10%;
+        top: -10px;
+    }
+}
+
+@keyframes test2-bottom {
+    0% {
+        bottom: -10px;
+        right: 20%;
+    }
+    30% {
+        right: calc(100% - 40px);
+        bottom: -10px;
+    }
+    45% {
+        right: calc(100% - 40px);
+        bottom: 100%;
+    }
+    75% {
+        right: 0;
+        bottom: 100%;
+    }
+    90% {
+        right: -15px;
+        bottom: -10px;
+    }
+    100% {
+        bottom: -10px;
+        right: 20%;
+    }
+}
